[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
name = "sec"
version = "0.99.0"
license = "MIT"
repository = "https://github.com/49nord/sec-rs"
description = "Prevent secrets from leaking via `Debug` or `Display` traits"

[dependencies]
diesel = { version = "0.99.0", optional = true }
serde = { version = "1.0.24", optional = true }

[features]
default = ["std"]

# the std features enables `String` support, but requires the standard library
std = []

# serde is optional
serialize = ["serde"]
deserialize = ["serde"]

# feature for diesel-rs
diesel_sql = ["diesel"]
