[package]
authors = ["Marc Brinkmann <marc@49nord.de>"]
name = "sec"
version = "0.99.3"
license = "MIT"
repository = "https://github.com/49nord/sec-rs"
description = "Prevent secrets from leaking via `Debug` or `Display` traits"
documentation = "https://docs.rs/sec"

[dependencies]
diesel = { version = "0.99.0", optional = true }
serde = { version = "1.0.24", optional = true }

[features]
default = ["std"]

# the std feature enables `String` support, but requires the standard library
std = []

# the ord feature enables potentially leaky PartialOrd and Ord traits
ord = []

# serde is optional
serialize = ["serde"]
deserialize = ["serde"]

# feature for diesel-rs
diesel_sql = ["diesel"]
