[package]
authors = ["Marc Brinkmann <marc@49nord.de>"]
name = "sec"
version = "1.0.0"
license = "MIT"
repository = "https://github.com/49nord/sec-rs"
description = "Prevent secrets from leaking via `Debug` or `Display` traits"
documentation = "https://docs.rs/sec"
edition = "2018"

[dependencies]
diesel = { version = "1", optional = true }
serde = { version = "1.0.24", optional = true }

[features]
default = ["std"]

# the std feature enables `String` support, but requires the standard library
std = []

# the ord feature enables potentially leaky PartialOrd and Ord traits
ord = []
